# bbdb-sandbox-cpp20

./: .gitignore  CMakeLists.txt  bodb.cpp  bodb.h  main.cpp  ptr_guard.h  scheme_b.cpp  scheme_b.h  src_provider.cpp  src_provider.h  type_provider.h
huf/: huf.h
src/: main.cpp
src/bsdb/: index_ptr_guard.cpp  index_ptr_guard.h  ptr_guard.cpp  ptr_guard.h  ptr_provider.cpp  ptr_provider.h  src_provider.cpp  src_provider.h
src/bsdb/bodb/: Bodb.cpp  Bodb.h  SchemeB.cpp  SchemeB.h  TypeProvider.cpp  TypeProvider.h  bodb.cpp  bodb.h  scheme_b.h  type_provider.cpp
src/bsdb/src_module/: interface.h  src_module.h
src/bsdb/src_module/base/: SrcControllerBase.cpp  SrcControllerBase.h  SrcDaemonBase.cpp  SrcDaemonBase.h  SrcProviderBase.cpp  SrcProviderBase.h  SrcQueryBase.cpp  SrcQueryBase.h  SrcTransactionBase.cpp  SrcTransactionBase.h
src/bsdb/src_module/guard/: IndexPtrGuard.cpp  IndexPtrGuard.h  PtrGuard.cpp  PtrGuard.h  SrcQueryGuard.cpp  SrcQueryGuard.h
src/bsdb/src_module/impl/: SrcController.cpp  SrcController.h  SrcProviderFile.cpp  SrcProviderFile.h  SrcThreadSafe.cpp  SrcThreadSafe.h  SrcTransaction.cpp  SrcTransaction.h
src/bsdb/src_module/provider/: SrcController.h  SrcProviderFile.cpp  SrcProviderFile.h  SrcQuery.cpp  SrcQuery.h
src/huf/: tup.h
tests/: SrcProviderFileTest.cpp  src_provider_impl_file_test.cpp  test.cpp
